--- a/k8s/metadata.yml
+++ b/k8s/metadata.yml
@@ -68,9 +68,27 @@ spec:
               configMapKeyRef:
                 name: java-tool-options
                 key: high
+          - name: OTEL_TRACES_EXPORTER
+            valueFrom:
+              secretKeyRef:
+                name: configs
+                key: OTEL_TRACES_EXPORTER
+          - name: OTEL_EXPORTER_JAEGER_ENDPOINT
+            valueFrom:
+              secretKeyRef:
+                name: configs
+                key: OTEL_EXPORTER_JAEGER_ENDPOINT
         ports:
           - name: listen-port
             containerPort: 60000
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 60000
+          initialDelaySeconds: 60
+          periodSeconds: 20
+          timeoutSeconds: 10
+          failureThreshold: 30
         livenessProbe:
           httpGet:
             path: /
