--- a/k8s/metadata.yml
+++ b/k8s/metadata.yml
@@ -92,7 +92,7 @@ spec:
           periodSeconds: 20
           timeoutSeconds: 10
           failureThreshold: 30
-        livenessProbe:
+        startupProbe:
           httpGet:
             path: /
             port: 60000
