--- a/k8s/metadata.yml
+++ b/k8s/metadata.yml
@@ -59,9 +59,11 @@ spec:
           requests:
             cpu: "160m"
             memory: "1Gi"
+            ephemeral-storage: "1Gi"
           limits:
             cpu: "3000m"
             memory: "3Gi"
+            ephemeral-storage: "1Gi"
         args:
           - --config
           - /etc/iplant/de/metadata.properties
